# merill

./: .gitignore  CLAUDE.md  package.json  scraping-grouping-ideas.json  vite.config.ts
.claude/: settings.local.json
malta-news-app/: index.html  package-lock.json  tsconfig.tsbuildinfo
malta-news-app/scripts/: convert_model.py
malta-news-app/src/: App.tsx  index.css  main.tsx
malta-news-app/src-tauri/: Cargo.toml  tauri.conf.json
malta-news-app/src-tauri/icons/: icon.icns
malta-news-app/src-tauri/src/: category.rs  clustering.rs  db.rs  lib.rs  models.rs  pipeline.rs  scraper.rs  translate.rs
malta-news-app/src/api/: clusters.ts
malta-news-app/src/components/BiasBar/: BiasBar.tsx
malta-news-app/src/components/StoryCard/: StoryCard.tsx
malta-news-app/src/screens/: index.tsx
malta-news-app/src/store/: useAppStore.ts
malta-news-app/src/types/: index.ts
malta-news-app/src/utils/: bias.ts  constants.ts  i18n.ts
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml
src-tauri/src/: clustering.rs  db.rs  lib.rs  pipeline.rs  publishers.rs  scraper.rs  translate.rs
src/api/: clusters.ts
src/components/BiasBar/: BiasBar.tsx
src/components/StoryCard/: StoryCard.tsx
src/screens/: index.tsx
src/store/: useAppStore.ts
src/utils/: bias.ts  headline.ts  i18n.ts
